# metaOpenNV_V2

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.train  JUDGES_GUIDE.md  README.md  app.py  client.py  inference.py  inference_test.py  models.py  openenv.yaml  out.txt  pyproject.toml  remote_trading_loop.py  requirements-trl.txt  requirements.txt  reward.py  smoke_test.py  test_phase5.py  validate_ends.py  verify_shape.py
agent/: __init__.py  dqn_agent.py  policy_network.py  replay_buffer.py
colab/: phase3_trl_sft.ipynb
data/: fetch_nifty50.py  fetch_yahoo.py  nifty50_prices.csv  preprocess.py  spy_prices.csv
docs/: HF_GPU_TRAIN.md  MATERIALS.md  MINI_BLOG_STORY.md
eval/: __init__.py  phase4_benchmark.py
results/: phase3_eval_metrics.md  phase4_metrics.md
scripts/: collect_sft_dataset.py  eval_llm_on_env.py  hf_train_and_push.py  trl_sft_train.py
server/: Dockerfile  app.py  dashboard.py  requirements.txt  trading_environment.py
tests/: test_env.py  test_eval_utils.py  test_prompt_utils.py  test_reward.py  test_teacher.py
training/: train.py
trl_data/: __init__.py  eval_utils.py  prompt_utils.py  teacher.py
